--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
@@ -16,8 +15,8 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "pdfjs-dist": "^3.11.174",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-pdf": "^7.7.2",
     "react-router-dom": "^7.8.0",
